Add pydantic model for house input data

--- a/notebook/house-price-prediction.ipynb
+++ b/notebook/house-price-prediction.ipynb
@@ -5984,6 +5984,7 @@
    },
    "outputs": [],
    "source": [
+    "# This is total finished SF\n",
     "add_feature('TotalSF', lambda df: df['1stFlrSF'] + df['2ndFlrSF'] + df['BsmtFinSF1'] + df['BsmtFinSF2'])"
    ]
   },
@@ -6009,7 +6010,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO this one is confusing to me -- look into this\n",
     "add_feature('TotalArea', lambda df: df['GrLivArea'] + df['TotalBsmtSF'])"
    ]
   },
@@ -6085,7 +6085,7 @@
    },
    "outputs": [],
    "source": [
-    "drop_features(['YrSold', 'YearBuilt', 'YearRemodAdd', '1stFlrSF', '2ndFlrSF', 'BsmtFinSF1', 'BsmtFinSF2', 'GrLivArea', 'TotalBsmtSF', 'BsmtFullBath', 'FullBath', 'BsmtHalfBath', 'HalfBath', 'OpenPorchSF', '3SsnPorch', 'EnclosedPorch', 'ScreenPorch', 'WoodDeckSF'])"
+    "drop_features(['MoSold', 'YrSold', 'YearBuilt', 'YearRemodAdd', '1stFlrSF', '2ndFlrSF', 'BsmtFinSF1', 'BsmtFinSF2', 'GrLivArea', 'TotalBsmtSF', 'BsmtFullBath', 'FullBath', 'BsmtHalfBath', 'HalfBath', 'OpenPorchSF', '3SsnPorch', 'EnclosedPorch', 'ScreenPorch', 'WoodDeckSF'])"
    ]
   },
   {
@@ -6485,7 +6485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 367,
    "id": "42a16b1a",
    "metadata": {
     "execution": {
@@ -6503,7 +6503,23 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['MSSubClass', 'LotFrontage', 'LotArea', 'OverallQual', 'OverallCond',\n",
+       "       'MasVnrArea', 'BsmtUnfSF', 'LowQualFinSF', 'BedroomAbvGr',\n",
+       "       'KitchenAbvGr', 'TotRmsAbvGrd', 'Fireplaces', 'GarageCars', 'PoolArea',\n",
+       "       'MiscVal', 'MoSold', 'HouseAge', 'HouseRemodelAge', 'TotalSF',\n",
+       "       'TotalArea', 'TotalBaths', 'TotalPorchSF'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 367,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_cols = X.select_dtypes(include=['int64', 'float64']).columns\n",
     "num_cols = num_cols.drop('SalePrice')"
@@ -7278,6 +7294,26 @@
     "plt.xlabel('Importance Score')\n",
     "plt.ylabel('Features')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X.columns)"
    ]
   }
  ],
