--- a/notebook/house-price-prediction.ipynb
+++ b/notebook/house-price-prediction.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "# Read the data\n",
     "X = pd.read_csv('./data/train.csv', index_col='Id')\n",
-    "X_test_full = pd.read_csv('./data/train.csv', index_col='Id')\n"
+    "X_test_full = pd.read_csv('./data/test.csv', index_col='Id')\n"
    ]
   },
   {
@@ -1558,6 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
+   "id": "cc6327c3",
    "metadata": {},
    "outputs": [
     {
@@ -8774,6 +8775,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
+   "id": "9333ef15",
    "metadata": {},
    "outputs": [
     {
